Sidebar disappears on mobile; fixes #191

--- a/css/monarch-common.css
+++ b/css/monarch-common.css
@@ -81,7 +81,7 @@ p {
 }
 @media (max-width: 768px) {
     .sidebar {
-        padding: 20px 0px 0px 20px;
+        display: none;
     }
 }
 .nav.nav-list {
@@ -94,9 +94,22 @@ p {
 }
 
 /* Section 3: Content */
+@media (min-width: 768px) {
+    .monarch-container {
+        padding: 40px 20px 0px 155px;
+    }
+}
+@media (max-width: 800px) {
+    .monarch-container {
+        padding: 40px 20px 0px 155px;
+    }
+}
+@media (max-width: 767px) {
+    .monarch-container {
+        padding: 40px 0px 0px;
+    }
+}
 .monarch-container {
-    padding: 40px 20px 0px 155px;
-    padding-right: 20px;
     height: 100%;
 }
 .content {
